--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html>
-	<head>
-        <meta charset="utf-8">
-		<title>World Database Lookup</title>
+<head>
+    <meta charset="utf-8">
+    <title>World Database Lookup</title>
 
-		<!-- you can modify this as needed or to your preference -->
-		<link href="world.css" type="text/css" rel="stylesheet" />
+    <!-- Link to CSS -->
+    <link href="world.css" type="text/css" rel="stylesheet" />
 
-		<!-- you write this -->
-		<script src="world.js" type="text/javascript"></script>
-	</head>
+    <!-- JavaScript with defer -->
+    <script src="world.js" type="text/javascript" defer></script>
+</head>
 
-	<body>
-		<header>
-			<h1>World Database Lookup</h1>
-		</header>
+<body>
+    <header>
+        <h1>World Database Lookup</h1>
+    </header>
 
-		<main>
-			<div id="controls">
-				<label for="country">Country:</label>
-				<input id="country" type="search" name="country" placeholder="Enter country name" />
-				<button id="lookup">Lookup</button>
-			</div>
-			
-			<div id="result">
-				<!-- countries will appear here -->
-			</div>
-		</main>
+    <main>
+        <div id="controls">
+            <label for="country">Country:</label>
+            <input id="country" type="search" name="country" placeholder="Enter country name" />
+            <button id="lookup">Lookup Countries</button>
+            <button id="citylookup">Lookup Cities</button> <!-- Added city lookup button -->
+        </div>
 
-	</body>
+        <div id="result">
+            <p>Results will appear here...</p>
+        </div>
+    </main>
+</body>
 </html>
